fix main position on tablet

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,21 @@
 .main {
   margin-left: 300px;
 }
+
+.main__hide-block {
+  margin-top: 83px;
+}
+
+@media (max-width: 992px) {
+  main {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+}
+
+@media (min-width: 993px) {
+  .main__hide-block {
+    margin-top: 0;
+    display: none;
+  }
+}
