--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,4 +1,5 @@
 .sidebar {
+  top: 0;
   width: 300px;
   height: 100%;
   font-weight: bold;
